refactoring after conversation